[project]
name = "lab"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Alejandro Granados", email = "agranadosb55199@outlook.com"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
